--- a/src/main/webapp/i18n/en/parameters.json
+++ b/src/main/webapp/i18n/en/parameters.json
@@ -19,8 +19,9 @@
       },
       "paramKey": "Param Key",
       "paramValue": "Param Value",
-      "parametersType": "Parameters Type",
-      "description": "Description"
+      "description": "Description",
+      "desctest": "Desctest",
+      "parametersType": "Parameters Type"
     }
   }
 }
